appgtw-ingress/ingress.yml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-hostname: "localhost"
    appgw.ingress.kubernetes.io/backend-path-prefix: /
spec:
  rules:
  - http:
      paths:
      - path: /aspnet
        backend:
          serviceName: aspnetapp
          servicePort: 80
        pathType: Prefix 
      - path: /aspnet/*
        backend:
          serviceName: aspnetapp
          servicePort: 80
        pathType: Prefix   
      - path: /green
        backend:
          serviceName: webapp-color
          servicePort: 8080
        pathType: Prefix   
      - path: /
        backend:
          serviceName: webapp-red
          servicePort: 8080
        pathType: Prefix
